# mkdocs-kroki-plugin

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile.techdocs-dev  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  release.py  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: Bug_Report.md  Bug_Report.yml  Feature_Request.md  Feature_Request.yml  Security_Vulnerability.md  Security_Vulnerability.yml
.github/workflows/: lint.yml  python-publish-test.yml  python-publish.yml  test.yml
kroki/: __init__.py  cache.py  client.py  common.py  config.py  diagram_types.py  logging.py  parsing.py  plugin.py  render.py  util.py
playground/: mkdocs.yml
playground/docs/: diagrams.md  index.md  network.md  uml.md
playground/docs/assets/: system-overview.puml
tests/: compat.py  conftest.py  test_cache.py  test_config.py  test_display_options.py  test_errors.py  test_errors_fail_fast.py  test_fences.py  test_happy_path.py  test_nested.py  test_whitespace.py  utils.py
tests/data/happy_path/docs/: index.md
tests/data/missing_from_file/docs/: index.md
tests/data/techdocs/: mkdocs.yml
tests/data/template/: mkdocs.yml
tests/data/template/docs/: index.md
